--- a/pom.xml
+++ b/pom.xml
@@ -52,30 +52,30 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.0-SNAPSHOT</spring-framework.version>
-		<spring-retry.version>1.3.4-SNAPSHOT</spring-retry.version>
-		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
+		<spring-framework.version>6.0.0-M5</spring-framework.version>
+		<spring-retry.version>1.3.3</spring-retry.version>
+		<spring-integration.version>6.0.0-M4</spring-integration.version>
 		<micrometer.version>1.10.0-M4</micrometer.version>
 		<jackson.version>2.13.3</jackson.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-geode.version>3.0.0-SNAPSHOT</spring-data-geode.version>
-		<spring-data-commons.version>3.0.0-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.0-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.0-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.0.0-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.0.0-SNAPSHOT</spring-ldap.version>
+		<spring-data-geode.version>3.0.0-M5</spring-data-geode.version>
+		<spring-data-commons.version>3.0.0-M5</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.0-M5</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.0-M5</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.0-M5</spring-kafka.version>
+		<spring-amqp.version>3.0.0-M3</spring-amqp.version>
+		<spring-ldap.version>3.0.0-M3</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
-		<gson.version>2.9.0</gson.version>
-		<hibernate-core.version>6.1.1.Final</hibernate-core.version>
-		<jakarta.annotation-api.version>2.0.0</jakarta.annotation-api.version>
+		<gson.version>2.9.1</gson.version>
+		<hibernate-core.version>6.1.2.Final</hibernate-core.version>
+		<jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
 		<jakarta.mail-api.version>2.0.1</jakarta.mail-api.version>
-		<jakarta.jms-api.version>3.0.0</jakarta.jms-api.version>
-		<jakarta.validation-api.version>3.0.0</jakarta.validation-api.version>
-		<jakarta.persistence-api.version>3.0.0</jakarta.persistence-api.version>
+		<jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
+		<jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
+		<jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
 		<neo4j-ogm-core.version>3.2.36</neo4j-ogm-core.version>
-		<mongodb-driver-sync.version>4.7.0</mongodb-driver-sync.version>
+		<mongodb-driver-sync.version>4.7.1</mongodb-driver-sync.version>
 		<xstream.version>1.4.19</xstream.version>
 		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 
@@ -84,45 +84,44 @@
 		<junit.version>4.13.2</junit.version>
 		<junit-vintage-engine.version>${junit-jupiter.version}</junit-vintage-engine.version>
 		<hamcrest.version>2.2</hamcrest.version>
-		<assertj.version>3.22.0</assertj.version>
-		<mockito.version>4.5.1</mockito.version>
+		<assertj.version>3.23.1</assertj.version>
+		<mockito.version>4.7.0</mockito.version>
 		<xmlunit.version>2.9.0</xmlunit.version>
 		<commons-io.version>2.11.0</commons-io.version>
 		<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
-		<slf4j.version>1.7.36</slf4j.version>
-		<hsqldb.version>2.6.1</hsqldb.version>
-		<h2.version>2.1.212</h2.version>
-		<sqlite.version>3.36.0.3</sqlite.version>
-		<derby.version>10.14.2.0</derby.version>
-		<hana.version>2.11.17</hana.version>
-		<artemis.version>2.22.0</artemis.version>
-		<jaxb-core.version>3.0.2</jaxb-core.version>
-		<log4j.version>2.17.2</log4j.version>
-		<hibernate-validator.version>7.0.4.Final</hibernate-validator.version>
-		<jakarta.el-api.version>4.0.0</jakarta.el-api.version>
+		<slf4j.version>2.0.0</slf4j.version>
+		<hsqldb.version>2.7.0</hsqldb.version>
+		<h2.version>2.1.214</h2.version>
+		<sqlite.version>3.39.2.0</sqlite.version>
+		<derby.version>10.14.2.0</derby.version> <!-- FIXME compilation failure when upgrading to 10.16.1.1 -->
+		<hana.version>2.13.9</hana.version>
+		<artemis.version>2.24.0</artemis.version>
+		<jaxb-core.version>4.0.0</jaxb-core.version>
+		<log4j.version>2.18.0</log4j.version>
+		<hibernate-validator.version>7.0.5.Final</hibernate-validator.version>
+		<jakarta.el-api.version>5.0.1</jakarta.el-api.version>
 		<jakarta.el.version>4.0.2</jakarta.el.version>
-		<jakarta.inject-api.version>2.0.0</jakarta.inject-api.version>
-		<jakarta.xml.bind-api.version>3.0.1</jakarta.xml.bind-api.version>
+		<jakarta.inject-api.version>2.0.1</jakarta.inject-api.version>
+		<jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
 		<jakarta.mail.version>2.0.1</jakarta.mail.version>
-		<woodstox-core.version>6.2.8</woodstox-core.version>
+		<woodstox-core.version>6.3.1</woodstox-core.version>
 		<aspectj.version>1.9.9.1</aspectj.version>
-		<mysql-connector-java.version>8.0.29</mysql-connector-java.version>
-		<postgresql.version>42.3.5</postgresql.version>
+		<mysql-connector-java.version>8.0.30</mysql-connector-java.version>
+		<postgresql.version>42.4.2</postgresql.version>
 		<db2.version>11.5.7.0</db2.version>
-		<oracle.version>19.14.0.0</oracle.version>
-		<sqlserver.version>10.2.0.jre17</sqlserver.version>
+		<oracle.version>19.15.0.0.1</oracle.version>
+		<sqlserver.version>11.2.0.jre17</sqlserver.version>
 		<jtds.version>1.3.1</jtds.version>
-		<testcontainers.version>1.17.1</testcontainers.version>
-		<jsonassert.version>1.5.0</jsonassert.version>
+		<testcontainers.version>1.17.3</testcontainers.version>
+		<jsonassert.version>1.5.1</jsonassert.version>
 
 		<!-- samples dependencies -->
 		<spring-rabbit.version>${spring-amqp.version}</spring-rabbit.version>
 		<quartz.version>2.3.2</quartz.version>
-		<prometheus_pushgateway.version>0.15.0</prometheus_pushgateway.version>
-		<groovy.version>3.0.10</groovy.version>
+		<prometheus_pushgateway.version>0.16.0</prometheus_pushgateway.version>
+		<groovy.version>3.0.12</groovy.version>
 
 		<!-- documentation dependencies -->
-		<spring-doc-resources.version>0.2.5</spring-doc-resources.version>
 		<asciidoctorj-pdf.version>1.6.2</asciidoctorj-pdf.version>
 		<asciidoctorj-epub.version>1.5.1</asciidoctorj-epub.version>
 
@@ -130,18 +129,18 @@
 		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
 		<maven-failsafe-plugin.version>3.0.0-M7</maven-failsafe-plugin.version>
-		<maven-javadoc-plugin.version>3.4.0</maven-javadoc-plugin.version>
+		<maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
 		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-		<jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
-		<flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
+		<jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+		<flatten-maven-plugin.version>1.3.0</flatten-maven-plugin.version>
 		<maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
-		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+		<maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
 		<asciidoctor-maven-plugin.version>2.2.2</asciidoctor-maven-plugin.version>
-		<maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
+		<maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
 		<maven-dependency-plugin.version>3.3.0</maven-dependency-plugin.version>
-		<maven-site-plugin.version>3.12.0</maven-site-plugin.version>
-		<maven-project-info-reports-plugin.version>3.3.0</maven-project-info-reports-plugin.version>
-		<maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
+		<maven-site-plugin.version>3.12.1</maven-site-plugin.version>
+		<maven-project-info-reports-plugin.version>3.4.1</maven-project-info-reports-plugin.version>
+		<maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
 		<maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
 		<build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
 		<spring-javaformat-maven-plugin.version>0.0.34</spring-javaformat-maven-plugin.version>
