--- a/pom.xml
+++ b/pom.xml
@@ -52,20 +52,20 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.0-M5</spring-framework.version>
-		<spring-retry.version>1.3.3</spring-retry.version>
-		<spring-integration.version>6.0.0-M4</spring-integration.version>
+		<spring-framework.version>6.0.0-SNAPSHOT</spring-framework.version>
+		<spring-retry.version>1.3.4-SNAPSHOT</spring-retry.version>
+		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
 		<micrometer.version>1.10.0-M4</micrometer.version>
 		<jackson.version>2.13.3</jackson.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-geode.version>3.0.0-M5</spring-data-geode.version>
-		<spring-data-commons.version>3.0.0-M5</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.0-M5</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.0-M5</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.0-M5</spring-kafka.version>
-		<spring-amqp.version>3.0.0-M3</spring-amqp.version>
-		<spring-ldap.version>3.0.0-M3</spring-ldap.version>
+		<spring-data-geode.version>3.0.0-SNAPSHOT</spring-data-geode.version>
+		<spring-data-commons.version>3.0.0-SNAPSHOT</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.0-SNAPSHOT</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.0-SNAPSHOT</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
+		<spring-amqp.version>3.0.0-SNAPSHOT</spring-amqp.version>
+		<spring-ldap.version>3.0.0-SNAPSHOT</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
 		<gson.version>2.9.1</gson.version>
 		<hibernate-core.version>6.1.2.Final</hibernate-core.version>
