--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 		<hsqldb.version>2.7.0</hsqldb.version>
 		<h2.version>2.1.214</h2.version>
 		<sqlite.version>3.39.2.0</sqlite.version>
-		<derby.version>10.14.2.0</derby.version> <!-- FIXME compilation failure when upgrading to 10.16.1.1 -->
+		<derby.version>10.16.1.1</derby.version>
 		<hana.version>2.13.9</hana.version>
 		<artemis.version>2.24.0</artemis.version>
 		<jaxb-core.version>4.0.0</jaxb-core.version>
