--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch</artifactId>
-		<version>5.0.0-SNAPSHOT</version>
+		<version>5.0.0-M6</version>
 	</parent>
 	<artifactId>spring-batch-samples</artifactId>
 	<packaging>jar</packaging>
@@ -20,7 +20,7 @@
 		<dependency>
 		  <groupId>org.springframework.batch</groupId>
 		  <artifactId>spring-batch-bom</artifactId>
-		  <version>5.0.0-SNAPSHOT</version>
+		  <version>5.0.0-M6</version>
 		  <type>pom</type>
 		  <scope>import</scope>
 		</dependency>
