--- a/build.gradle
+++ b/build.gradle
@@ -48,18 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.23'
+		springVersionDefault = '5.3.24-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.3'
-		springAmqpVersion = '2.3.16'
-		springDataCommonsVersion = '2.5.12'
-		springDataGeodeVersion = '2.5.12'
-		springDataJpaVersion = '2.5.12'
-		springDataMongodbVersion = '3.2.12'
-		springIntegrationVersion = '5.5.15'
-		springKafkaVersion = '2.7.14'
-		springLdapVersion = '2.3.8.RELEASE'
-		micrometerVersion = '1.8.10'
+		springRetryVersion = '1.3.4-SNAPSHOT'
+		springAmqpVersion = '2.3.17-SNAPSHOT'
+		springDataCommonsVersion = '2.5.13-SNAPSHOT'
+		springDataGeodeVersion = '2.5.13-SNAPSHOT'
+		springDataJpaVersion = '2.5.13-SNAPSHOT'
+		springDataMongodbVersion = '3.2.13-SNAPSHOT'
+		springIntegrationVersion = '5.5.16-SNAPSHOT'
+		springKafkaVersion = '2.7.15-SNAPSHOT'
+		springLdapVersion = '2.3.9.BUILD-SNAPSHOT'
+		micrometerVersion = '1.8.11-SNAPSHOT'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
