--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 		<spring-framework.version>6.0.0-SNAPSHOT</spring-framework.version>
 		<spring-retry.version>2.0.0-SNAPSHOT</spring-retry.version>
 		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
-		<micrometer.version>1.10.0-SNAPSHOT</micrometer.version>
+		<micrometer.version>1.10.0-M6</micrometer.version>
 		<jackson.version>2.13.4</jackson.version>
 
 		<!-- optional production dependencies -->
@@ -79,7 +79,7 @@
 		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.0.0-SNAPSHOT</micrometer-tracing.version>
+		<micrometer-tracing.version>1.0.0-M8</micrometer-tracing.version>
 		<xstream.version>1.4.19</xstream.version>
 		<junit.version>4.13.2</junit.version>
 		<junit-vintage-engine.version>${junit-jupiter.version}</junit-vintage-engine.version>
