--- a/pom.xml
+++ b/pom.xml
@@ -52,53 +52,53 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.0-SNAPSHOT</spring-framework.version>
-		<spring-retry.version>2.0.0-SNAPSHOT</spring-retry.version>
-		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
-		<micrometer.version>1.10.0-SNAPSHOT</micrometer.version>
-		<jackson.version>2.13.4</jackson.version>
+		<spring-framework.version>6.0.0-RC1</spring-framework.version>
+		<spring-retry.version>2.0.0-M1</spring-retry.version>
+		<spring-integration.version>6.0.0-M5</spring-integration.version>
+		<micrometer.version>1.10.0-RC1</micrometer.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-geode.version>3.0.0-SNAPSHOT</spring-data-geode.version>
-		<spring-data-commons.version>3.0.0-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.0-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.0-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.0.0-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.0.0-SNAPSHOT</spring-ldap.version>
+		<jackson.version>2.13.4</jackson.version>
+		<spring-data-geode.version>3.0.0-M6</spring-data-geode.version>
+		<spring-data-commons.version>3.0.0-M6</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.0-M6</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.0-M6</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.0-M6</spring-kafka.version>
+		<spring-amqp.version>3.0.0-M4</spring-amqp.version>
+		<spring-ldap.version>3.0.0-RC1</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
 		<gson.version>2.9.1</gson.version>
-		<hibernate-core.version>6.1.3.Final</hibernate-core.version>
+		<hibernate-core.version>6.1.4.Final</hibernate-core.version>
 		<jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
 		<jakarta.mail-api.version>2.0.1</jakarta.mail-api.version>
 		<jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
 		<jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
 		<jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
 		<neo4j-ogm-core.version>3.2.37</neo4j-ogm-core.version>
-		<mongodb-driver-sync.version>4.7.1</mongodb-driver-sync.version>
+		<mongodb-driver-sync.version>4.7.2</mongodb-driver-sync.version>
 		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.0.0-SNAPSHOT</micrometer-tracing.version>
+		<micrometer-tracing.version>1.0.0-RC1</micrometer-tracing.version>
 		<xstream.version>1.4.19</xstream.version>
 		<junit.version>4.13.2</junit.version>
 		<junit-vintage-engine.version>${junit-jupiter.version}</junit-vintage-engine.version>
 		<hamcrest.version>2.2</hamcrest.version>
 		<assertj.version>3.23.1</assertj.version>
-		<mockito.version>4.7.0</mockito.version>
+		<mockito.version>4.8.0</mockito.version>
 		<xmlunit.version>2.9.0</xmlunit.version>
 		<commons-io.version>2.11.0</commons-io.version>
 		<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
-		<slf4j.version>2.0.0</slf4j.version>
+		<slf4j.version>2.0.3</slf4j.version>
 		<hsqldb.version>2.7.0</hsqldb.version>
 		<h2.version>2.1.214</h2.version>
-		<sqlite.version>3.39.2.0</sqlite.version>
+		<sqlite.version>3.39.3.0</sqlite.version>
 		<derby.version>10.16.1.1</derby.version>
 		<hana.version>2.13.9</hana.version>
-		<artemis.version>2.24.0</artemis.version>
-		<jaxb-core.version>4.0.0</jaxb-core.version>
-		<log4j.version>2.18.0</log4j.version>
-		<hibernate-validator.version>7.0.5.Final</hibernate-validator.version>
+		<artemis.version>2.26.0</artemis.version>
+		<jaxb-core.version>4.0.1</jaxb-core.version>
+		<log4j.version>2.19.0</log4j.version>
+		<hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
 		<jakarta.el-api.version>5.0.1</jakarta.el-api.version>
 		<jakarta.el.version>4.0.2</jakarta.el.version>
 		<jakarta.inject-api.version>2.0.1</jakarta.inject-api.version>
@@ -107,12 +107,12 @@
 		<woodstox-core.version>6.3.1</woodstox-core.version>
 		<aspectj.version>1.9.9.1</aspectj.version>
 		<mysql-connector-java.version>8.0.30</mysql-connector-java.version>
-		<postgresql.version>42.4.2</postgresql.version>
+		<postgresql.version>42.5.0</postgresql.version>
 		<db2.version>11.5.7.0</db2.version>
-		<oracle.version>19.15.0.0.1</oracle.version>
+		<oracle.version>19.16.0.0</oracle.version>
 		<sqlserver.version>11.2.0.jre17</sqlserver.version>
 		<jtds.version>1.3.1</jtds.version>
-		<testcontainers.version>1.17.3</testcontainers.version>
+		<testcontainers.version>1.17.5</testcontainers.version>
 		<jsonassert.version>1.5.1</jsonassert.version>
 
 		<!-- samples dependencies -->
