--- a/pom.xml
+++ b/pom.xml
@@ -52,20 +52,20 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.0-RC1</spring-framework.version>
-		<spring-retry.version>2.0.0-M1</spring-retry.version>
-		<spring-integration.version>6.0.0-M5</spring-integration.version>
-		<micrometer.version>1.10.0-RC1</micrometer.version>
+		<spring-framework.version>6.0.0-SNAPSHOT</spring-framework.version>
+		<spring-retry.version>2.0.0-SNAPSHOT</spring-retry.version>
+		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
+		<micrometer.version>1.10.0-SNAPSHOT</micrometer.version>
 
 		<!-- optional production dependencies -->
 		<jackson.version>2.13.4</jackson.version>
-		<spring-data-geode.version>3.0.0-M6</spring-data-geode.version>
-		<spring-data-commons.version>3.0.0-M6</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.0-M6</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.0-M6</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.0-M6</spring-kafka.version>
-		<spring-amqp.version>3.0.0-M4</spring-amqp.version>
-		<spring-ldap.version>3.0.0-RC1</spring-ldap.version>
+		<spring-data-geode.version>3.0.0-SNAPSHOT</spring-data-geode.version>
+		<spring-data-commons.version>3.0.0-SNAPSHOT</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.0-SNAPSHOT</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.0-SNAPSHOT</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
+		<spring-amqp.version>3.0.0-SNAPSHOT</spring-amqp.version>
+		<spring-ldap.version>3.0.0-SNAPSHOT</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
 		<gson.version>2.9.1</gson.version>
 		<hibernate-core.version>6.1.4.Final</hibernate-core.version>
@@ -79,7 +79,7 @@
 		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.0.0-RC1</micrometer-tracing.version>
+		<micrometer-tracing.version>1.0.0-SNAPSHOT</micrometer-tracing.version>
 		<xstream.version>1.4.19</xstream.version>
 		<junit.version>4.13.2</junit.version>
 		<junit-vintage-engine.version>${junit-jupiter.version}</junit-vintage-engine.version>
