--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -107,9 +107,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>${mysql-connector-java.version}</version>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>${mysql-connector-j.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
