--- a/spring-batch-bom/pom.xml
+++ b/spring-batch-bom/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch</artifactId>
-		<version>5.0.0-RC1</version>
+		<version>5.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>spring-batch-bom</artifactId>
 	<packaging>pom</packaging>
@@ -46,22 +46,22 @@
 			<dependency>
 				<groupId>org.springframework.batch</groupId>
 				<artifactId>spring-batch-core</artifactId>
-				<version>5.0.0-RC1</version>
+				<version>5.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.batch</groupId>
 				<artifactId>spring-batch-infrastructure</artifactId>
-				<version>5.0.0-RC1</version>
+				<version>5.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.batch</groupId>
 				<artifactId>spring-batch-integration</artifactId>
-				<version>5.0.0-RC1</version>
+				<version>5.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.batch</groupId>
 				<artifactId>spring-batch-test</artifactId>
-				<version>5.0.0-RC1</version>
+				<version>5.0.0-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
