--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
 		<woodstox-core.version>6.3.1</woodstox-core.version>
 		<aspectj.version>1.9.9.1</aspectj.version>
 		<mysql-connector-j.version>8.0.31</mysql-connector-j.version>
+		<mariadb-java-client.version>3.0.8</mariadb-java-client.version>
 		<postgresql.version>42.5.0</postgresql.version>
 		<db2.version>11.5.7.0</db2.version>
 		<oracle.version>19.16.0.0</oracle.version>
