--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,17 @@ jobs:
       - name: Generate Reference docs
         working-directory: spring-batch-docs
         run: mvn site
+
+      - name: Capture project version
+        run: echo PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version --quiet -DforceStdout) >> $GITHUB_ENV
+
+      - name: Deploy docs
+        env:
+          DOCS_HOST: ${{ secrets.DOCS_HOST }}
+          DOCS_PATH: ${{ secrets.DOCS_PATH }}
+          DOCS_SSH_KEY: ${{ secrets.DOCS_SSH_KEY }}
+        working-directory: spring-batch-docs
+        run: |
+          cd target && unzip spring-batch-$PROJECT_VERSION-docs.zip && \
+          scp -i $DOCS_SSH_KEY -r api $DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION && \
+          scp -i $DOCS_SSH_KEY -r reference $DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION
