--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
+          cache: 'maven'
 
       - name: Build with Maven and deploy to Artifactory
         env:
@@ -39,9 +39,10 @@ jobs:
         env:
           DOCS_HOST: ${{ secrets.DOCS_HOST }}
           DOCS_PATH: ${{ secrets.DOCS_PATH }}
+          DOCS_USERNAME: ${{ secrets.DOCS_USERNAME }}
           DOCS_SSH_KEY: ${{ secrets.DOCS_SSH_KEY }}
         working-directory: spring-batch-docs
         run: |
           cd target && unzip spring-batch-$PROJECT_VERSION-docs.zip && \
-          scp -i $DOCS_SSH_KEY -r api $DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION && \
-          scp -i $DOCS_SSH_KEY -r reference $DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION
+          scp -i $DOCS_SSH_KEY -r api $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION && \
+          scp -i $DOCS_SSH_KEY -r reference $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION
