--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,5 +44,5 @@ jobs:
         working-directory: spring-batch-docs
         run: |
           cd target && unzip spring-batch-$PROJECT_VERSION-docs.zip && \
-          scp -i $DOCS_SSH_KEY -r api $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION && \
-          scp -i $DOCS_SSH_KEY -r reference $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION
+          scp -i "$DOCS_SSH_KEY" -r api $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION && \
+          scp -i "$DOCS_SSH_KEY" -r reference $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION
